--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -1,6 +1,16 @@
-name: Check & fix styling
+name: PHP CS Fixer
 
-on: [push]
+on:
+  push:
+    paths:
+      - '**.php'
+      - '.php_cs.dist.php'
+      - '.github/workflows/php-cs-fixer.yml'
+  pull_request:
+    paths:
+      - '**.php'
+      - '.php_cs.dist.php'
+      - '.github/workflows/php-cs-fixer.yml'
 
 jobs:
   php-cs-fixer:
@@ -9,15 +19,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
         with:
-          ref: ${{ github.head_ref }}
+          php-version: '8.3'
+          coverage: none
+
+      - name: Install composer dependencies
+        uses: ramsey/composer-install@v3
 
       - name: Run PHP CS Fixer
-        uses: docker://oskarstark/php-cs-fixer-ga
-        with:
-          args: --config=.php_cs.dist.php --allow-risky=yes
-
-      - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v6
-        with:
-          commit_message: Fix styling
+        run: vendor/bin/php-cs-fixer fix --config=.php_cs.dist.php --allow-risky=yes --diff --dry-run
