--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "illuminate/redis": "^11.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.87",
         "orchestra/testbench": "^9.0",
+        "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^10.5"
     },
     "autoload": {
