--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -1,16 +1,6 @@
-name: PHP CS Fixer
+name: Check & fix styling
 
-on:
-  push:
-    paths:
-      - '**.php'
-      - '.php_cs.dist.php'
-      - '.github/workflows/php-cs-fixer.yml'
-  pull_request:
-    paths:
-      - '**.php'
-      - '.php_cs.dist.php'
-      - '.github/workflows/php-cs-fixer.yml'
+on: [push]
 
 jobs:
   php-cs-fixer:
@@ -19,15 +9,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.3'
-          coverage: none
-
-      - name: Install composer dependencies
-        uses: ramsey/composer-install@v3
+          ref: ${{ github.head_ref }}
 
       - name: Run PHP CS Fixer
-        run: vendor/bin/php-cs-fixer fix --config=.php_cs.dist.php --allow-risky=yes --diff --dry-run
+        uses: docker://oskarstark/php-cs-fixer-ga
+        with:
+          args: --config=.php_cs.dist.php --allow-risky=yes
+
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v6
+        with:
+          commit_message: Fix styling
