--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,15 +13,9 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         php: [8.4, 8.3, 8.2]
-        laravel: [^12.0, ^10.0, ^11.0]
+        laravel: [^12.0]
+        testbench: [^10.0]
         dependency-version: [prefer-lowest, prefer-stable]
-        include:
-          - laravel: ^10.0
-            testbench: ^8.0
-          - laravel: ^11.0
-            testbench: ^9.0
-          - laravel: ^12.0
-            testbench: ^10.0
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
