--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,33 @@
 {
-    "name": "allnetru/sharding",
-    "description": "Laravel database sharding toolkit extracted from Boost",
+    "name": "allnetru/laravel-sharding",
+    "description": "Laravel database sharding toolkit",
+    "keywords": [
+        "laravel",
+        "laravel-sharding",
+        "sharding"
+    ],
     "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "allnetru",
-            "email": "dev@allnet.ru"
+            "name": "Alexey Torochkov",
+            "email": "all.net.ru@gmail.com",
+            "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/support": "^11.0",
-        "illuminate/database": "^11.0",
-        "illuminate/console": "^11.0",
-        "illuminate/pagination": "^11.0",
-        "illuminate/redis": "^11.0"
+        "illuminate/support": "^12.0",
+        "illuminate/database": "^12.0",
+        "illuminate/console": "^12.0",
+        "illuminate/pagination": "^12.0",
+        "illuminate/redis": "^12.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^9.0",
-        "phpunit/phpunit": "^10.5"
+        "friendsofphp/php-cs-fixer": "^3.87",
+        "orchestra/testbench": "^10.0",
+        "phpstan/phpstan": "^2.1",
+        "phpunit/phpunit": "^10.5|^11.0"
     },
     "autoload": {
         "psr-4": {
@@ -41,6 +49,9 @@
     "scripts": {
         "test": "vendor/bin/phpunit"
     },
-    "minimum-stability": "stable",
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
