Use env helper in sharding config

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -10,6 +10,8 @@ parameters:
     checkOctaneCompatibility: true
     checkModelProperties: true
     checkMissingIterableValueType: false
+    configDirectories:
+        - %currentWorkingDirectory%/config
 
 parametersSchema:
     checkMissingIterableValueType: bool()
