--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "analyse": "vendor/bin/phpstan analyse",
-        "test-coverage": "vendor/bin/phpunit --coverage-text",
+        "lint": "vendor/bin/php-cs-fixer fix --dry-run --diff --config=.php_cs.dist.php",
+        "test-coverage": "XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-text",
         "baseline": "vendor/bin/phpstan --generate-baseline"
     },
     "config": {
