--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -1,4 +1,4 @@
-name: "Update Changelog"
+name: "Update Changelog (PR)"
 
 on:
   release:
@@ -8,6 +8,7 @@ jobs:
   update:
     permissions:
       contents: write
+      pull-requests: write
     runs-on: ubuntu-latest
 
     steps:
@@ -15,6 +16,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           ref: main
+          fetch-depth: 0
 
       - name: Update Changelog
         uses: stefanzweifel/changelog-updater-action@v1
@@ -22,9 +24,30 @@ jobs:
           latest-version: ${{ github.event.release.name }}
           release-notes: ${{ github.event.release.body }}
 
-      - name: Commit updated CHANGELOG
-        uses: stefanzweifel/git-auto-commit-action@v6
+      - name: Create Pull Request
+        id: cpr
+        uses: peter-evans/create-pull-request@v6
         with:
-          branch: main
-          commit_message: Update CHANGELOG
-          file_pattern: CHANGELOG.md
+          commit-message: "chore: update CHANGELOG for ${{ github.event.release.name }}"
+          title: "chore: update CHANGELOG for ${{ github.event.release.name }}"
+          body: |
+            This PR updates **CHANGELOG.md** from the released notes.
+
+            - **Release:** `${{ github.event.release.name }}`
+            - Triggered by a `release: released` event.
+          branch: "chore/update-changelog-${{ github.event.release.tag_name || github.event.release.name }}"
+          base: "main"
+          add-paths: |
+            CHANGELOG.md
+          labels: |
+            changelog
+            automation
+          signoff: true
+          delete-branch: true
+      - name: Enable auto-merge
+        if: steps.cpr.outputs.pull-request-operation == 'created'
+        uses: peter-evans/enable-pull-request-automerge@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
+          merge-method: squash
